# u

./: .gitignore  README.md  battery.sh  checkport.sh  colors.sh  connectping.sh  everything.sh  flag.sh  gitpullall.sh  install-configs.sh  raspi3wifi.txt  say-file.sh  say-lines.sh  sqrt.c
configs/: .bash_binds  .bash_funcs  .bash_vars  .bashrc  .gitconfig  .nanorc  .tmux.conf  apt-get-updates.sh  everything.sh  flag.sh
templates/: CMakeLists.txt
templates/cmake/: CMakeLists.txt  README.md  cmakeconfig.h.in
templates/cmake/curses/: CMakeLists.txt
templates/cmake/curses/src/: CMakeLists.txt  correct_curses.h.in
templates/cmake/curses/test/: CMakeLists.txt
templates/cmake/sfml/: CMakeLists.txt
templates/cmake/sfml/src/: CMakeLists.txt
templates/cmake/sfml/test/: CMakeLists.txt
